--- a/material-kit-react-main/public/index.html
+++ b/material-kit-react-main/public/index.html
@@ -27,15 +27,18 @@
 
   <style type="text/css">@media print{.form-section{display:inline!important}.form-pagebreak{display:none!important}.form-section-closed{height:auto!important}.page-section{position:initial!important}}</style>
   <link type="text/css" rel="stylesheet" href="https://cdn01.jotfor.ms/themes/CSS/5e6b428acc8c4e222d1beb91.css?themeRevisionID=5f7ed99c2c2c7240ba580251"/>
-  <link type="text/css" rel="stylesheet" href="https://cdn02.jotfor.ms/css/styles/payment/payment_styles.css?3.3.30004" />
-  <link type="text/css" rel="stylesheet" href="https://cdn03.jotfor.ms/css/styles/payment/payment_feature.css?3.3.30004" />
-  <!--[if lt IE 9]><script src="https://cdn01.jotfor.ms/js/vendor/flashcanvas.js?3.3.30004" type="text/javascript"></script><![endif]-->
-  <script src="https://cdn02.jotfor.ms/js/vendor/jquery-1.8.0.min.js?3.3.30004" type="text/javascript"></script>
-  <script src="https://cdn03.jotfor.ms/js/vendor/jSignature.min.noconflict.js?3.3.30004" type="text/javascript"></script>
-  <script src="https://cdn01.jotfor.ms/js/vendor/jotform.signaturepad.js?3.3.30004" type="text/javascript"></script>
+  <link type="text/css" rel="stylesheet" href="https://cdn02.jotfor.ms/css/styles/payment/payment_styles.css?3.3.30350" />
+  <link type="text/css" rel="stylesheet" href="https://cdn03.jotfor.ms/css/styles/payment/payment_feature.css?3.3.30350" />
+  <!--[if lt IE 9]><script src="https://cdn01.jotfor.ms/js/vendor/flashcanvas.js?3.3.30350" type="text/javascript"></script><![endif]-->
+  <script src="https://cdn02.jotfor.ms/js/vendor/jquery-1.8.0.min.js?3.3.30350" type="text/javascript"></script>
+  <script src="https://cdn03.jotfor.ms/js/vendor/jSignature.min.noconflict.js?3.3.30350" type="text/javascript"></script>
+  <script src="https://cdn01.jotfor.ms/js/vendor/jotform.signaturepad.js?3.3.30350" type="text/javascript"></script>
   <script src="https://cdn02.jotfor.ms/static/prototype.forms.js" type="text/javascript"></script>
-  <script src="https://cdn03.jotfor.ms/static/jotform.forms.js?3.3.30004" type="text/javascript"></script>
-  <script type="text/javascript">	JotForm.newDefaultTheme = true;
+  <script src="https://cdn03.jotfor.ms/static/jotform.forms.js?3.3.30350" type="text/javascript"></script>
+  <script defer src="https://cdn01.jotfor.ms/js/vendor/maskedinput.min.js?v=3.3.30350" type="text/javascript"></script>
+  <script defer src="https://cdn02.jotfor.ms/js/vendor/jquery.maskedinput.min.js?v=3.3.30350" type="text/javascript"></script>
+  <script type="text/javascript">
+  JotForm.newDefaultTheme = true;
   JotForm.extendsNewTheme = false;
   JotForm.newPaymentUIForNewCreatedForms = true;
   JotForm.newPaymentUI = true;
@@ -51,9 +54,16 @@
     JotForm.calendarOther = {"today":"Today"};
     var languageOptions = document.querySelectorAll('#langList li');
     for(var langIndex = 0; langIndex < languageOptions.length; langIndex++) {
-      languageOptions[langIndex].on('click', function(e) { setTimeout(function(){ JotForm.setCalendar("18", false, {"days":{"monday":true,"tuesday":true,"wednesday":true,"thursday":true,"friday":true,"saturday":true,"sunday":true},"future":true,"past":true,"custom":false,"ranges":false,"start":"","end":""}); }, 0); });
+      languageOptions[langIndex].on('click', function(e) { setTimeout(function(){
+      JotForm.setCalendar("18", false, {"days":{"monday":true,"tuesday":true,"wednesday":true,"thursday":true,"friday":true,"saturday":true,"sunday":true},"future":true,"past":true,"custom":false,"ranges":false,"start":"","end":""}); }, 0); });
     }
-    JotForm.onTranslationsFetch(function() { JotForm.setCalendar("18", false, {"days":{"monday":true,"tuesday":true,"wednesday":true,"thursday":true,"friday":true,"saturday":true,"sunday":true},"future":true,"past":true,"custom":false,"ranges":false,"start":"","end":""}); });
+    JotForm.onTranslationsFetch(function() {
+    JotForm.setCalendar("18", false, {"days":{"monday":true,"tuesday":true,"wednesday":true,"thursday":true,"friday":true,"saturday":true,"sunday":true},"future":true,"past":true,"custom":false,"ranges":false,"start":"","end":""}); });
+    JotForm.formatDate({date:(new Date()), dateField:$("id_"+5)});
+    JotForm.displayTimeRangeDuration(4);
+    JotForm.displayLocalTime("input_4_hourSelect", "input_4_minuteSelect","input_4_ampm", "input_4_timeInput", true);
+    JotForm.alterTexts(undefined);
+
     JotForm.setPhoneMaskingValidator( 'input_5_full', '(###) ###-####' );
     /*setTimeout(function() {
       $('input_6').hint('ex: email@yahoo.com');
@@ -77,5 +87,5 @@
 
 </html>
 
-<script type="text/javascript">JotForm.ownerView=true;</script><script src="https://cdn.jotfor.ms//js/vendor/smoothscroll.min.js?v=3.3.30004"></script>
-<script src="https://cdn.jotfor.ms//js/errorNavigation.js?v=3.3.30004"></script>
+<script type="text/javascript">JotForm.ownerView=true;</script><script src="https://cdn.jotfor.ms//js/vendor/smoothscroll.min.js?v=3.3.30350"></script>
+<script src="https://cdn.jotfor.ms//js/errorNavigation.js?v=3.3.30350"></script>
