--- a/material-kit-react-main/public/index.html
+++ b/material-kit-react-main/public/index.html
@@ -4,25 +4,20 @@
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-  <!-- favicon -->
   <link href="img/GOA_Logo_stroke-1.png" rel="icon" sizes="32x32" type="image/png">
-  <!-- Bootstrap CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <!-- font themify CSS -->
-  <link rel="stylesheet" href="css/themify-icons.css">
-  <!-- font awesome CSS -->
+  <link rel="stylesheet" href="./css/themify-icons.css">
   <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
-  <!-- revolution slider css -->
   <link rel="stylesheet" type="text/css" href="css/fullscreen.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
   <link rel="stylesheet" href="css/rev-settings.css" type="text/css">
   <!-- on3step CSS -->
-  <link href="css/animated-on3step.css" rel="stylesheet">
-  <link href="css/owl.carousel.css" rel="stylesheet">
-  <link href="css/owl.theme.css" rel="stylesheet">
-  <link href="css/owl.transitions.css" rel="stylesheet">
-  <link href="css/on3step-style.css" rel="stylesheet">
-  <link href="css/queries-on3step.css" media="all" rel="stylesheet" type="text/css">
+  <link href="./css/animated-on3step.css" rel="stylesheet">
+  <link href="./css/owl.carousel.css" rel="stylesheet">
+  <link href="./css/owl.theme.css" rel="stylesheet">
+  <link href="./css/owl.transitions.css" rel="stylesheet">
+  <link href="./css/on3step-style.css" rel="stylesheet">
+  <link href="./css/queries-on3step.css" media="all" rel="stylesheet" type="text/css">
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/GOA_Logo_stroke-1.png.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/GOA_Logo_stroke-1.png.png">
@@ -49,70 +44,13 @@
   <link type="text/css" rel="stylesheet" href="https://cdn01.jotfor.ms/themes/CSS/5e6b428acc8c4e222d1beb91.css?themeRevisionID=5f7ed99c2c2c7240ba580251"/>
   <link type="text/css" rel="stylesheet" href="https://cdn02.jotfor.ms/css/styles/payment/payment_styles.css?3.3.30350" />
   <link type="text/css" rel="stylesheet" href="https://cdn03.jotfor.ms/css/styles/payment/payment_feature.css?3.3.30350" />
-  <!--[if lt IE 9]><script src="https://cdn01.jotfor.ms/js/vendor/flashcanvas.js?3.3.30350" type="text/javascript"></script><![endif]-->
-  <script src="https://cdn02.jotfor.ms/js/vendor/jquery-1.8.0.min.js?3.3.30350" type="text/javascript"></script>
-  <script src="https://cdn03.jotfor.ms/js/vendor/jSignature.min.noconflict.js?3.3.30350" type="text/javascript"></script>
-  <script src="https://cdn01.jotfor.ms/js/vendor/jotform.signaturepad.js?3.3.30350" type="text/javascript"></script>
-<!--
-  <script src="https://cdn02.jotfor.ms/static/prototype.forms.js" type="text/javascript"></script>
--->
-  <script src="https://cdn03.jotfor.ms/static/jotform.forms.js?3.3.30350" type="text/javascript"></script>
-  <script defer src="https://cdn01.jotfor.ms/js/vendor/maskedinput.min.js?v=3.3.30350" type="text/javascript"></script>
-  <script defer src="https://cdn02.jotfor.ms/js/vendor/jquery.maskedinput.min.js?v=3.3.30350" type="text/javascript"></script>
-  <script type="text/javascript">
-  JotForm.newDefaultTheme = true;
-  JotForm.extendsNewTheme = false;
-  JotForm.newPaymentUIForNewCreatedForms = true;
-  JotForm.newPaymentUI = true;
-  JotForm.clearFieldOnHide="disable";
-  JotForm.submitError="jumpToFirstError";
-
-  JotForm.init(function(){
-    /*INIT-START*/
-    if (window.JotForm && JotForm.accessible) $('input_16').setAttribute('tabindex',0);
-
-    JotForm.calendarMonths = ["January","February","March","April","May","June","July","August","September","October","November","December"];
-    JotForm.calendarDays = ["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"];
-    JotForm.calendarOther = {"today":"Today"};
-    var languageOptions = document.querySelectorAll('#langList li');
-    for(var langIndex = 0; langIndex < languageOptions.length; langIndex++) {
-      languageOptions[langIndex].on('click', function(e) { setTimeout(function(){
-      JotForm.setCalendar("18", false, {"days":{"monday":true,"tuesday":true,"wednesday":true,"thursday":true,"friday":true,"saturday":true,"sunday":true},"future":true,"past":true,"custom":false,"ranges":false,"start":"","end":""}); }, 0); });
-    }
-    JotForm.onTranslationsFetch(function() {
-    JotForm.setCalendar("18", false, {"days":{"monday":true,"tuesday":true,"wednesday":true,"thursday":true,"friday":true,"saturday":true,"sunday":true},"future":true,"past":true,"custom":false,"ranges":false,"start":"","end":""}); });
-    JotForm.formatDate({date:(new Date()), dateField:$("id_"+5)});
-    JotForm.displayTimeRangeDuration(4);
-    JotForm.displayLocalTime("input_4_hourSelect", "input_4_minuteSelect","input_4_ampm", "input_4_timeInput", true);
-    JotForm.alterTexts(undefined);
-
-    JotForm.setPhoneMaskingValidator( 'input_5_full', '(###) ###-####' );
-    /*setTimeout(function() {
-      $('input_6').hint('ex: email@yahoo.com');
-    }, 20);*/
-
-    JotForm.alterTexts({"ageVerificationError":"You must be older than {minAge} years old to submit this form.","alphabetic":"This field can only contain letters","alphanumeric":"This field can only contain letters and numbers.","appointmentSelected":"You’ve selected {time} on {date}","ccDonationMinLimitError":"Minimum amount is {minAmount} {currency}","ccInvalidCVC":"CVC number is invalid.","ccInvalidExpireDate":"Expire date is invalid.","ccInvalidNumber":"Credit Card Number is invalid.","ccMissingDetails":"Please fill up the credit card details.","ccMissingDonation":"Please enter numeric values for donation amount.","ccMissingProduct":"Please select at least one product.","characterLimitError":"Too many Characters.  The limit is","characterMinLimitError":"Too few characters. The minimum is","confirmClearForm":"Are you sure you want to clear the form","confirmEmail":"E-mail does not match","currency":"This field can only contain currency values.","cyrillic":"This field can only contain cyrillic characters","dateInvalid":"This date is not valid. The date format is {format}","dateInvalidSeparate":"This date is not valid. Enter a valid {element}.","dateLimited":"This date is unavailable.","disallowDecimals":"Please enter a whole number.","dragAndDropFilesHere_infoMessage":"Drag and drop files here","email":"Enter a valid e-mail address","fillMask":"Field value must fill mask.","freeEmailError":"Free email accounts are not allowed","generalError":"There are errors on the form. Please fix them before continuing.","generalPageError":"There are errors on this page. Please fix them before continuing.","gradingScoreError":"Score total should only be less than or equal to","incompleteFields":"There are incomplete required fields. Please complete them.","inputCarretErrorA":"Input should not be less than the minimum value:","inputCarretErrorB":"Input should not be greater than the maximum value:","justSoldOut":"Just Sold Out","lessThan":"Your score should be less than or equal to","maxDigitsError":"The maximum digits allowed is","maxFileSize_infoMessage":"Max. file size","maxSelectionsError":"The maximum number of selections allowed is ","minSelectionsError":"The minimum required number of selections is ","multipleFileUploads_emptyError":"{file} is empty, please select files again without it.","multipleFileUploads_fileLimitError":"Only {fileLimit} file uploads allowed.","multipleFileUploads_minSizeError":"{file} is too small, minimum file size is {minSizeLimit}.","multipleFileUploads_onLeave":"The files are being uploaded, if you leave now the upload will be cancelled.","multipleFileUploads_sizeError":"{file} is too large, maximum file size is {sizeLimit}.","multipleFileUploads_typeError":"{file} has invalid extension. Only {extensions} are allowed.","multipleFileUploads_uploadFailed":"File upload failed, please remove it and upload the file again.","noSlotsAvailable":"No slots available","notEnoughStock":"Not enough stock for the current selection","notEnoughStock_remainedItems":"Not enough stock for the current selection ({count} items left)","noUploadExtensions":"File has no extension file type (e.g. .txt, .png, .jpeg)","numeric":"This field can only contain numeric values","pastDatesDisallowed":"Date must not be in the past.","pleaseWait":"Please wait...","required":"This field is required.","requireEveryCell":"Every cell is required.","requireEveryRow":"Every row is required.","requireOne":"At least one field required.","restrictedDomain":"This domain is not allowed","selectionSoldOut":"Selection Sold Out","slotUnavailable":"{time} on {date} has been taken. Please select another slot.","soldOut":"Sold Out","subProductItemsLeft":"({count} items left)","uploadExtensions":"You can only upload following files:","uploadFilesize":"File size cannot be bigger than:","uploadFilesizemin":"File size cannot be smaller than:","url":"This field can only contain a valid URL","validateEmail":"You need to validate this e-mail","wordLimitError":"Too many words. The limit is","wordMinLimitError":"Too few words.  The minimum is"});
-    /*INIT-END*/
-  });
-
-  JotForm.prepareCalculationsOnTheFly([null,{"name":"heading","qid":"1","text":"Form","type":"control_head"},{"name":"submit2","qid":"2","text":"Submit","type":"control_button"},null,{"description":"","name":"address","qid":"4","text":"Address","type":"control_address"},{"description":"","name":"signature","qid":"5","subLabel":"","text":"Signature","type":"control_signature"}]);
-  setTimeout(function() {
-    JotForm.paymentExtrasOnTheFly([null,{"name":"heading","qid":"1","text":"Form","type":"control_head"},{"name":"submit2","qid":"2","text":"Submit","type":"control_button"},null,{"description":"","name":"address","qid":"4","text":"Address","type":"control_address"},{"description":"","name":"signature","qid":"5","subLabel":"","text":"Signature","type":"control_signature"}]);}, 20);
-  </script>
-
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
-
-</html>
-
-<script type="text/javascript">JotForm.ownerView=true;</script><script src="https://cdn.jotfor.ms//js/vendor/smoothscroll.min.js?v=3.3.30350"></script>
-<script src="https://cdn.jotfor.ms//js/errorNavigation.js?v=3.3.30350"></script>
-
-
+<!-- plugin JS -->
 <script src="plugin/pluginson3step.js"></script>
 <script src="plugin/sticky.js"></script>
 <!-- slider revolution  -->
@@ -121,3 +59,7 @@
 <!-- on3step JS -->
 <script src="js/on3step.js"></script>
 <script src="js/plugin-set.js"></script>
+</html>
+
+
+
